--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     ports:
       - "3000:3000"
     image: nest-image
-    container_name: nset-system
+    container_name: nest-system
     environment:
       NODE_ENV: production
